Ahora si esta el enunciado y el problema propyesto bien elaborado

--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -41,7 +41,7 @@
     "    X_3 + X_6  &\\geq 200 \\\\\n",
     "    X_1 &\\geq 100 \\\\\n",
     "    X_3 &\\leq 450 \\\\\n",
-    "    \n",
+    "    X_1, X_2, X_3, X_4, X_5, X_6 &\\geq 0\n",
     "\\end{aligned}\n",
     "$$\n"
    ]
