--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -49,12 +49,74 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Resolución del problema mediante pyomo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyomo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Importar Pyomo\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyomo\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menviron\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Crear el modelo\u001b[39;00m\n\u001b[0;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m ConcreteModel()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyomo'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Importar Pyomo\n",
+    "from pyomo.environ import *\n",
+    "\n",
+    "# Crear el modelo\n",
+    "model = ConcreteModel()\n",
+    "\n",
+    "# Definir las variables\n",
+    "model.x1 = Var(within=NonNegativeReals)\n",
+    "model.x2 = Var(within=NonNegativeReals)\n",
+    "\n",
+    "# Definir la función objetivo\n",
+    "model.obj = Objective(expr=40*model.x1 + 30*model.x2, sense=maximize)\n",
+    "\n",
+    "# Definir las restricciones\n",
+    "model.constraint1 = Constraint(expr=2*model.x1 + 3*model.x2 <= 60)\n",
+    "model.constraint2 = Constraint(expr=model.x1 + 2*model.x2 <= 40)\n",
+    "\n",
+    "# Resolver el problema\n",
+    "solver = SolverFactory('glpk')\n",
+    "solver.solve(model)\n",
+    "\n",
+    "# Mostrar los resultados\n",
+    "model.x1.display()\n",
+    "model.x2.display()\n",
+    "model.obj.display()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
