--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -81,13 +81,21 @@
     "# Definir las variables\n",
     "model.x1 = Var(within=NonNegativeReals)\n",
     "model.x2 = Var(within=NonNegativeReals)\n",
+    "model.x3 = Var(within=NonNegativeReals)\n",
+    "model.x4 = Var(within=NonNegativeReals)\n",
+    "model.x5 = Var(within=NonNegativeReals)\n",
+    "model.x6 = Var(within=NonNegativeReals)\n",
     "\n",
     "# Definir la función objetivo\n",
-    "model.obj = Objective(expr=40*model.x1 + 30*model.x2, sense=maximize)\n",
+    "model.obj = Objective(expr=2000*model.x1 + 1500*model.x2 + 1000*model.x3 + 3000*model.x4 + 2500*model.x5 + 500*model.x6, sense=maximize)\n",
     "\n",
     "# Definir las restricciones\n",
-    "model.constraint1 = Constraint(expr=2*model.x1 + 3*model.x2 <= 60)\n",
-    "model.constraint2 = Constraint(expr=model.x1 + 2*model.x2 <= 40)\n",
+    "model.constraint1 = Constraint(expr=model.x1 + model.x2 + model.x3 + model.x4 + model.x5 + model.x6 <= 1000)\n",
+    "model.constraint2 = Constraint(expr=model.x1 + model.x2 + model.x6 <= 600)\n",
+    "model.constraint3 = Constraint(expr=model.x4 + model.x5 <= 350)\n",
+    "model.constraint4 = Constraint(expr=model.x3 + model.x6 >= 200)\n",
+    "model.constraint5 = Constraint(expr=model.x1 >= 100)\n",
+    "model.constraint6 = Constraint(expr=model.x3 <= 450)\n",
     "\n",
     "# Resolver el problema\n",
     "solver = SolverFactory('glpk')\n",
@@ -96,6 +104,10 @@
     "# Mostrar los resultados\n",
     "model.x1.display()\n",
     "model.x2.display()\n",
+    "model.x3.display()\n",
+    "model.x4.display()\n",
+    "model.x5.display()\n",
+    "model.x6.display()\n",
     "model.obj.display()"
    ]
   }
