Acabado el problema con pyomo pero aun no tengo instalado pyomo asique no puedo saber si etsa bien resuelto o no

--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -71,44 +71,46 @@
     }
    ],
    "source": [
-    "\n",
-    "# Importar Pyomo\n",
     "from pyomo.environ import *\n",
     "\n",
     "# Crear el modelo\n",
     "model = ConcreteModel()\n",
     "\n",
     "# Definir las variables\n",
-    "model.x1 = Var(within=NonNegativeReals)\n",
-    "model.x2 = Var(within=NonNegativeReals)\n",
-    "model.x3 = Var(within=NonNegativeReals)\n",
-    "model.x4 = Var(within=NonNegativeReals)\n",
-    "model.x5 = Var(within=NonNegativeReals)\n",
-    "model.x6 = Var(within=NonNegativeReals)\n",
+    "model.x1 = Var(within=NonNegativeReals)  # Triciclos a motor\n",
+    "model.x2 = Var(within=NonNegativeReals)  # Bicicletas con motor\n",
+    "model.x3 = Var(within=NonNegativeReals)  # Patinetes eléctricos\n",
+    "model.x4 = Var(within=NonNegativeReals)  # Quads\n",
+    "model.x5 = Var(within=NonNegativeReals)  # Motocicletas\n",
+    "model.x6 = Var(within=NonNegativeReals)  # Bicicletas estándar\n",
     "\n",
     "# Definir la función objetivo\n",
-    "model.obj = Objective(expr=2000*model.x1 + 1500*model.x2 + 1000*model.x3 + 3000*model.x4 + 2500*model.x5 + 500*model.x6, sense=maximize)\n",
+    "model.obj = Objective(\n",
+    "    expr=2000*model.x1 + 1500*model.x2 + 1000*model.x3 + 3000*model.x4 + 2500*model.x5 + 500*model.x6, \n",
+    "    sense=maximize\n",
+    ")\n",
     "\n",
     "# Definir las restricciones\n",
     "model.constraint1 = Constraint(expr=model.x1 + model.x2 + model.x3 + model.x4 + model.x5 + model.x6 <= 1000)\n",
     "model.constraint2 = Constraint(expr=model.x1 + model.x2 + model.x6 <= 600)\n",
     "model.constraint3 = Constraint(expr=model.x4 + model.x5 <= 350)\n",
     "model.constraint4 = Constraint(expr=model.x3 + model.x6 >= 200)\n",
-    "model.constraint5 = Constraint(expr=model.x1 >= 100)\n",
-    "model.constraint6 = Constraint(expr=model.x3 <= 450)\n",
+    "model.constraint5 = Constraint(expr=model.x2 >= 100)  # Bicicletas con motor\n",
+    "model.constraint6 = Constraint(expr=model.x1 <= 450)  # Triciclos a motor\n",
     "\n",
     "# Resolver el problema\n",
     "solver = SolverFactory('glpk')\n",
     "solver.solve(model)\n",
     "\n",
     "# Mostrar los resultados\n",
-    "model.x1.display()\n",
-    "model.x2.display()\n",
-    "model.x3.display()\n",
-    "model.x4.display()\n",
-    "model.x5.display()\n",
-    "model.x6.display()\n",
-    "model.obj.display()"
+    "print(\"\\nResultados:\")\n",
+    "print(f\"Triciclos a motor (x1): {model.x1.value}\")\n",
+    "print(f\"Bicicletas con motor (x2): {model.x2.value}\")\n",
+    "print(f\"Patinetes eléctricos (x3): {model.x3.value}\")\n",
+    "print(f\"Quads (x4): {model.x4.value}\")\n",
+    "print(f\"Motocicletas (x5): {model.x5.value}\")\n",
+    "print(f\"Bicicletas estándar (x6): {model.x6.value}\")\n",
+    "print(f\"Beneficio total: {model.obj()} €\")\n"
    ]
   }
  ],
