Cambios y explicaciones de los resultados

--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En una localidad de segovia llamada Coca (Mi pueblo) existe una fábrica de distintos tipos de vehículos. Los vehiculos fabricados son 6 distintos; Triciclos a motor, Bicicletas con motor, Patinetes electricos , quads, motocicletas y bicicletas estándar. Lo máximo que puede producir la fabrica al dia es de 1000 unidades. Al día no se pueden producir mas de 600 unidades entre Bicicletas con motor, tricilos a motor y Bicicletas estándar. Tampoco se pueden producir mas de 350 unidades entre quads y motocicletas. Se deben producir al menos 200 unidades entre patinetes eléctricos y bicicletas estándar. Se deben producir mas de 100 bicicletas a motor y menos de 450 triciclos a motor.\n",
+    "En una localidad de segovia llamada Coca (Mi pueblo) existe una fábrica de distintos tipos de vehículos. Los vehiculos fabricados son 6 distintos; Triciclos a motor, Bicicletas con motor, Patinetes electricos , quads, motocicletas y bicicletas estándar. Lo máximo que puede producir la fabrica al mes es de 1000 unidades. Al mes no se pueden producir mas de 600 unidades entre Bicicletas con motor, tricilos a motor y Bicicletas estándar. Tampoco se pueden producir mas de 350 unidades entre quads y motocicletas. Se deben producir al menos 200 unidades entre patinetes eléctricos y bicicletas estándar. Se deben producir mas de 100 bicicletas a motor y menos de 450 triciclos a motor.\n",
     "Sabiendo que cada producto tiene el siguiente precio de venta: \n",
     "- Triciclos a motor: 2000€\n",
     "- Bicicletas con motor: 1500€\n",
@@ -59,14 +59,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyomo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Importar Pyomo\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyomo\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01menviron\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Crear el modelo\u001b[39;00m\n\u001b[0;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m ConcreteModel()\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyomo'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Resultados:\n",
+      "Triciclos a motor (x1): 350.0\n",
+      "Bicicletas con motor (x2): 100.0\n",
+      "Patinetes eléctricos (x3): 200.0\n",
+      "Quads (x4): 350.0\n",
+      "Motocicletas (x5): 0.0\n",
+      "Bicicletas estándar (x6): 0.0\n",
+      "Beneficio total: 2100000.0 €\n"
      ]
     }
    ],
@@ -111,6 +115,13 @@
     "print(f\"Motocicletas (x5): {model.x5.value}\")\n",
     "print(f\"Bicicletas estándar (x6): {model.x6.value}\")\n",
     "print(f\"Beneficio total: {model.obj()} €\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras haber resuelto el problema de maximizar los beneficios mediante pyomo, los resultados hayados son los siguiente; para maximizar los beneficios siguiendo sus restricciones deberemos fabricar 350 Triciclos a motor, 100 Bicicletas con motor, 200 Patinetes eléctricos, 350 Quads, 0 Motocicletas y 0 Bicicletas estándar. El beneficio total obtenido es de 2.100.000 euros."
    ]
   },
   {
@@ -194,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -208,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
