Cambios varios, asi como casi terminado el problema dual

--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -208,6 +208,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Antes de crear el problema dual y de ahi resolverlo, deberemos preparar bien el problema primal; "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maximizar:  \n",
+    "$$ \n",
+    "Z = 2000X_1 + 1500X_2 + 1000X_3 + 3000X_4 + 2500X_5 + 500X_6\n",
+    "$$\n",
+    "\n",
+    "Sujeto a las siguientes restricciones:  \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "    X_1 + X_2 + X_3 + X_4 + X_5 + X_6 + X_7 &= 1000 \\quad (1) \\\\\n",
+    "    X_1 + X_2 + X_6 + X_8 &= 600 \\quad (2) \\\\\n",
+    "    X_4 + X_5 + X_9 &= 350 \\quad (3) \\\\\n",
+    "    X_3 + X_6 - x_{10} &= 200 \\quad (4) \\\\\n",
+    "    X_1 - X_{11} &= 100 \\quad (5) \\\\\n",
+    "    X_3 + X_{12} &= 450 \\quad (6) \\\\\n",
+    "    X_1, X_2, X_3, X_4, X_5, X_6, X_7, X_8, X_9, X_{10}, X_{11}, X_{12} &\\geq 0\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego una vez reescrito el problema primal de esta forma, ya podriamos crear el problema dual\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Minimizar:  \n",
+    "$$\n",
+    "W = 1000Y_1 + 600Y_2 + 350Y_3 + 200Y_4 + 100Y_5 + 450Y_6\n",
+    "$$\n",
+    "\n",
+    "Sujeto a:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "    Y_1 + Y_2 + Y_5 &\\geq 2000 \\\\\n",
+    "    Y_1 + Y_2 &\\geq 1500 \\\\\n",
+    "    Y_1 + Y_4 + Y_6 &\\geq 1000 \\\\\n",
+    "    Y_1 + Y_3 &\\geq 3000 \\\\\n",
+    "    Y_1 + Y_3 &\\geq 2500 \\\\\n",
+    "    Y_1 + Y_2 + Y_4 &\\geq 500\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Con:\n",
+    "$$\n",
+    "Y_1, Y_2, Y_3, Y_4, Y_5, Y_6 \\geq 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación resolveremos el problema mediante pyomo y analizaremos los resultados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados:\n",
+      "Y1 = 1000.0\n",
+      "Y2 = 500.0\n",
+      "Y3 = 2000.0\n",
+      "Y4 = 0.0\n",
+      "Y5 = 500.0\n",
+      "Y6 = 0.0\n",
+      "Valor óptimo de W = 2050000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyomo.environ import *\n",
+    "\n",
+    "# Crear el modelo\n",
+    "model = ConcreteModel()\n",
+    "\n",
+    "# Definir las variables\n",
+    "model.Y1 = Var(domain=NonNegativeReals)\n",
+    "model.Y2 = Var(domain=NonNegativeReals)\n",
+    "model.Y3 = Var(domain=NonNegativeReals)\n",
+    "model.Y4 = Var(domain=NonNegativeReals)\n",
+    "model.Y5 = Var(domain=NonNegativeReals)\n",
+    "model.Y6 = Var(domain=NonNegativeReals)\n",
+    "\n",
+    "# Función objetivo: Minimizar W\n",
+    "model.objective = Objective(\n",
+    "    expr=1000 * model.Y1 + 600 * model.Y2 + 350 * model.Y3 +\n",
+    "         200 * model.Y4 + 100 * model.Y5 + 450 * model.Y6,\n",
+    "    sense=minimize\n",
+    ")\n",
+    "\n",
+    "# Restricciones\n",
+    "model.constraint1 = Constraint(expr=model.Y1 + model.Y2 + model.Y5 >= 2000)\n",
+    "model.constraint2 = Constraint(expr=model.Y1 + model.Y2 >= 1500)\n",
+    "model.constraint3 = Constraint(expr=model.Y1 + model.Y4 + model.Y6 >= 1000)\n",
+    "model.constraint4 = Constraint(expr=model.Y1 + model.Y3 >= 3000)\n",
+    "model.constraint5 = Constraint(expr=model.Y1 + model.Y3 >= 2500)\n",
+    "model.constraint6 = Constraint(expr=model.Y1 + model.Y2 + model.Y4 >= 500)\n",
+    "\n",
+    "# Resolver el modelo\n",
+    "solver = SolverFactory('glpk')\n",
+    "solver.solve(model)\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "print(\"Resultados:\")\n",
+    "print(f\"Y1 = {model.Y1.value}\")\n",
+    "print(f\"Y2 = {model.Y2.value}\")\n",
+    "print(f\"Y3 = {model.Y3.value}\")\n",
+    "print(f\"Y4 = {model.Y4.value}\")\n",
+    "print(f\"Y5 = {model.Y5.value}\")\n",
+    "print(f\"Y6 = {model.Y6.value}\")\n",
+    "print(f\"Valor óptimo de W = {model.objective()}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Relacion e interpretación entre el problema dual y el problema primal \n",
+    "- Primero; Que busca cada problema \n",
+    "El objetivo del problema primal es maximizar el beneficio de la fabrica teniendo en cuenta el precio de venta y respetando las restricciones establecidas. Minetras que el objetivo del problema dual o mas bien lo que expresa el problema dual es como aumentarian los beneficios de la fabrica si se aumenta el valor asociado a Yi\n",
+    "\n",
+    "- ¿Cual es la interpretacion de las variables del problema dual?\n",
+    "Tenemos los siguientes resultados al resolver el problema dual:\n",
+    "Y1 = 1000\n",
+    "Y2 = 500\n",
+    "Y3 = 2000\n",
+    "Y4 = 0.\n",
+    "Y5 = 500\n",
+    "Y6 = 0\n",
+    "Valor óptimo de W = 2.050.000\n",
+    "\n",
+    "Para la varibale Y1; Esta variable esta asociada a la primera restriccion donde la producción total tiene un maximo de 1000 productos al mes, entonces el resultado del problema dual nos dice que por cada unidad que aumentemos, el beneficio aumentari 1000€ es decir que si en vez de ser 1000 productos al mes se produjera 1001, el beneficio aumentaria en 1000€. Para la variable Y2; Es la variable que esta asociada a que solo se pueden fabricar 600 productos entre la suma de  bicicletas con motor, triciclos, y bicicletas estándar al mes, por tanto viendo el resultado del problema dual tenemos que al aumentar una unidad del maximo posible a fabricar, el beneficio aumentaria 500€. Para la variable Y3; Es la variable qasociada al limite de 350 productos totales entre quads y motocicletas donde vemos que es donde mayor beneficio vamos a sacar si aumentamos una unidad a su restriccion de solo 350 productos, sindo este beneficio de 2000€. Para la variable Y5; Variable asociada a que se deben producir al menos 100 bicicletas con motor tenemos que su beneficio al ampliar una unidad la restriccion es de 500€. Para las variables Y4 e Y6 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Resolucion del problema mediante el metodo grafico\n",
     "Un tiempo mas tarde esta fabrica se da cuenta de que es preferible fabricar únicamente 2 productos y sacarle la maxima rentabilidad, entonces decide comenzar a fabricar solamente triciclos a motor y bicicletas con motor. Se debe tener en cuenta que debe haber una serie de requistos que por ley o por motivos de la empresa se deben respetar que son; al mes solo es posible fabricar un total de 600 productos, se deben fabricar al menos 120 triciclos a motor y como mucho puede fabricar 400 bicicletas con motor. Por último hay que tener en cuenta que el beneficio de un triciclo a motor es de 2000€ y el de una bicicleta con motor es de 1500€. ¿Cuántos triciclos a motor y bicicletas con motor se deben fabricar para maximizar los beneficios?"
    ]
