Descripcion del resultado

--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tras haber resuelto el problema de maximizar los beneficios mediante pyomo, los resultados hayados son los siguiente; para maximizar los beneficios siguiendo sus restricciones deberemos fabricar 350 Triciclos a motor, 100 Bicicletas con motor, 200 Patinetes eléctricos, 350 Quads, 0 Motocicletas y 0 Bicicletas estándar. El beneficio total obtenido es de 2.100.000 euros."
+    "La solucion a nuestro problema seria fabricar 350 vehículos a motor, 100 bicicletas con motor, 200 patinetes electricos 350 quads, 0 motocicletas y 0 bicicletas estándard. Siendo el beneficio total de 2.100.000 euros al mes."
    ]
   },
   {
