--- a/Problema.ipynb
+++ b/Problema.ipynb
@@ -495,10 +495,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Implicitly replacing the Component attribute constraint2 (type=<class\n",
+      "'pyomo.core.base.constraint.ScalarConstraint'>) on block unknown with a new\n",
+      "Component (type=<class\n",
+      "'pyomo.core.base.constraint.AbstractScalarConstraint'>). This is usually\n",
+      "indicative of a modelling error. To avoid this warning, use\n",
+      "block.del_component() and block.add_component().\n",
+      "Estado: ok\n",
+      "Resultado: optimal\n",
+      "x1: 0.0\n",
+      "x2: 5.0\n",
+      "Valor óptimo de la función objetivo: -10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyomo.environ import *\n",
+    "\n",
+    "# Crear el modelo\n",
+    "model = ConcreteModel()\n",
+    "\n",
+    "# Definir las variables continuas no negativas\n",
+    "model.x1 = Var(domain=NonNegativeReals)\n",
+    "model.x2 = Var(domain=NonNegativeReals)\n",
+    "\n",
+    "# Definir la función objetivo\n",
+    "model.obj = Objective(expr=model.x1 - 2*model.x2, sense=minimize)\n",
+    "\n",
+    "# Definir las restricciones\n",
+    "model.constraint1 = Constraint(expr=2*model.x1 + model.x2 <= 5)\n",
+    "model.constraint2 = Constraint(expr=-4*model.x1 + 4*model.x2 <= 5)\n",
+    "model.constraint2 = Constraint(expr=model.x2 >= 3)\n",
+    "\n",
+    "\n",
+    "# Resolver el modelo\n",
+    "solver = SolverFactory('glpk')  # Usar el solver GLPK\n",
+    "result = solver.solve(model)\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "print(\"Estado:\", result.solver.status)\n",
+    "print(\"Resultado:\", result.solver.termination_condition)\n",
+    "\n",
+    "# Mostrar valores óptimos de las variables\n",
+    "print(f\"x1: {model.x1.value}\")\n",
+    "print(f\"x2: {model.x2.value}\")\n",
+    "\n",
+    "# Mostrar el valor óptimo de la función objetivo\n",
+    "print(f\"Valor óptimo de la función objetivo: {model.obj()}\")\n"
+   ]
   },
   {
    "cell_type": "code",
